--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -1,7 +1,14 @@
-
 @mixin grid {
   @supports (grid-area: auto) {
     @content;
+  }
+}
+
+@mixin cf {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
   }
 }
 
